--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,26 @@
 spring.application.name=vms
 
 
-jwt.secret=verylongsecretkeyverysecure12345678901234567890
-jwt.expiration=86400000
+spring.jwt.secret=verylongsecretkeyverysecure12345678901234567890
+spring.jwt.access-token-expiration=86400000
+spring.jwt.refresh-token-expiration=86400000
 
 
 spring.cache.cache-names=otpCache
 spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=600s
 
 spring.mail.host=smtp.zoho.com
-spring.mail.port=465
+spring.mail.port=587
 spring.mail.username=ybarasingiz@zohomail.com
 spring.mail.password=FvAaJAuLsYwE
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=false
+
+spring.mail.properties.mail.debug=true
+
 
 # Thymeleaf configuration
 spring.thymeleaf.cache=false
@@ -32,3 +39,10 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+
+logging.level.org.springdoc=DEBUG
+logging.level.org.springframework.security=DEBUG
