--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,6 @@ spring.jwt.refresh-token-expiration=86400000
 spring.cache.cache-names=otpCache
 spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=600s
 
-spring.mail.host=smtp.zoho.com
 spring.mail.port=587
 spring.mail.username=ybarasingiz@zohomail.com
 spring.mail.password=FvAaJAuLsYwE
@@ -18,6 +17,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.enable=false
+spring.mail.host=smtp.zoho.com
+
 
 spring.mail.properties.mail.debug=true
 
@@ -29,7 +30,7 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 
 # PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/vms_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/vmd_db
 spring.datasource.username=postgres
 spring.datasource.password=gomgom1029
 spring.datasource.driver-class-name=org.postgresql.Driver
