--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
@@ -164,6 +166,12 @@
 							<artifactId>mapstruct-processor</artifactId>
 							<version>1.6.3</version> <!-- Specify version -->
 						</path>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok-mapstruct-binding</artifactId>
+							<version>0.2.0</version>
+						</path>
+
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
