--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 
 # PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/vmd_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/erp_db
 spring.datasource.username=postgres
 spring.datasource.password=gomgom1029
 spring.datasource.driver-class-name=org.postgresql.Driver
